
  Fixes:
  * LinOTP legacy SelfService Authorization is now correctly responding with
    an "unauthorized" http response instead of an internal server error.
  * After enrollment, push and qr token enrollment status will stay completed
    even when these tokens are disabled.
  * support reencoding of linotp2 db's with iso8859 (python2+mysql) by
    conversion of db entries to utf-8.

 -- KeyIdentity LinOTP Packaging <linotp@keyidentity.com>  Mon, 16 Nov 2020 15:33:11 +0200

linotp (3.0~rc1-1) buster-dev; urgency=low

  Features:
  * Rename the `linotp backup` command to `linotp dbsnapshot`, and the
    `linotp backup-legacy` command to `linotp backup`, for clarity.
  * Remove the linotp-restore(1) man page as `linotp restore` is not a
    LinOTP command.
  * Configuration:
    * Add the SESSION_COOKIE_SECURE configuration setting, which controls
      the "secure" flag on session cookies. This defaults to "true" in
      "production" mode and to "false" otherwise.

  Fixes:
  * setting of totp timeStep does now adjust the otp counter
    which is used to prevent replay attacks.
  * Favicon in manage and auth pages is no longer missing
  * Unintentional file config inclusion in Config database is removed
    to not have security critical information API accessible
  * Porting the pkcs11 security module to python3 binary encoding/decoding
  * Removed predefined yubico apiKey and apiId
  * The database configuration was not always imported on upgrade due
    to differences in the apt environment
  * The old Apache site file is removed on upgrade if unchanged

 -- KeyIdentity LinOTP Packaging <linotp@keyidentity.com>  Tue, 10 Nov 2020 15:11:01 +0200

linotp (3.0~rc0-1) buster-dev; urgency=low

  Features:
  * Selfservice: the selfservice enrollment of hmac and hotp tokens now honors
    the default values defined by the selfservice enrollment policies:
    * hmac_otplen, totp_otplen: for the number of digits of an otp